<?xml version="1.0"?>
<package format="2">
  <name>surveillance_robot</name>
  <version>0.0.1</version>
  <description>Package for the first assignment of Experimental Laboratory.</description>

  <maintainer email="5322242@studenti.unige.it">Ettore Sani</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>armor</build_depend>
  <build_depend>armor_py_api</build_depend>
  <build_depend>smach</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>armor</build_export_depend>
  <build_export_depend>armor_py_api</build_export_depend>
  <build_export_depend>smach</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>armor</exec_depend>
  <exec_depend>armor_py_api</exec_depend>
  <exec_depend>smach</exec_depend>

  <export> </export>
</package>
